src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Opening_Times__c</fullName>
        <description>TFUS-000004689</description>
        <label>Opening Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consumables</fullName>
                    <isActive>false</isActive>
                    <label>Consumables</label>
                </value>
                <value>
                    <fullName>Dealer Sales Rep (CEREC)</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                    <isActive>false</isActive>
                    <label>Digital</label>
                </value>
                <value>
                    <fullName>Digital Group</fullName>
                    <isActive>false</isActive>
                    <label>Digital Group</label>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                    <isActive>false</isActive>
                    <label>Endodontics</label>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                    <isActive>false</isActive>
                    <label>Equipment</label>
                </value>
                <value>
                    <fullName>Equipment &amp; Imaging</fullName>
                    <isActive>false</isActive>
                    <label>Equipment &amp; Imaging</label>
                </value>
                <value>
                    <fullName>Implants</fullName>
                    <isActive>false</isActive>
                    <label>Implants</label>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                    <isActive>false</isActive>
                    <label>Orthodontics</label>
                </value>
                <value>
                    <fullName>Partner Sales Rep Imaging</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                    <isActive>false</isActive>
                    <label>Prosthetics</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TF_ContactName__c</fullName>
        <description>Used to display the full contact name in Equipment Booking flow.</description>
        <formula>Contact.Full_Name__c</formula>
        <label>TF_ContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Used to enter the different titles a contact has with the different Accounts</description>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>